--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
     "name": "Letterboxd List Search",
     "description": "Allows you to search lists on letterboxd. Works better on smaller lists (< 2000) but will work on any list if you let the page load",
     "icons": {
-        "16": "searchlogo16.png",
-        "32": "searchlogo32.png",
-        "48": "searchlogo48.png",
-        "128": "searchlogo128.png"
+        "16": "./logo/searchlogo16.png",
+        "32": "./logo/searchlogo32.png",
+        "48": "./logo/searchlogo48.png",
+        "128": "./logo/searchlogo128.png"
       },
     "version": "0.1",
     "manifest_version": 3,
